<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/finish_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:text="@string/List"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <ListView
        android:id="@+id/finish_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true" >
    </ListView>

    <TextView
        android:id="@+id/totalprice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish_list"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/TotalPrice"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/finish_totalprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish_list"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/totalprice_text"
        android:textColor="@color/green"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish_totalprice"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/ArrivalTime"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TimePicker
        android:id="@+id/select_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish_totalprice"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/finish_confirm"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/xml_shape1"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>