<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/condition_city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/xml_shape1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/button_world" />

            <TextView
                android:id="@+id/location_city"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/City"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="100dp"
                android:src="@drawable/button_location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/condition_distance"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/xml_shape1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/button_distance" />

            <TextView
                android:id="@+id/location_distance"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/Distance"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/condition_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/xml_shape1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/button_menu" />

            <TextView
                android:id="@+id/shop_type"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/Type"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/condition_budget"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/xml_shape1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/button_budget" />

            <TextView
                android:id="@+id/per_budget"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/Budget"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/condition_store"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/xml_shape1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/button_store" />

            <TextView
                android:id="@+id/search_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/Hint"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/condition_traffic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/xml_shape1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/button_traffic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/Traffic"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/traffic_select"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="190dp"
                android:button="@drawable/xml_checkbox_style"
                android:checked="true"
                android:gravity="center_vertical" />
        </LinearLayout>

        <com.cjj.sva.JJSearchView
            android:id="@+id/search_icon"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</FrameLayout>