<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/skyblue" >

            <LinearLayout
                android:id="@+id/selector"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/xml_shape2"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/select_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/xml_selector_arrow"
                        android:gravity="center"
                        android:text="@string/City"
                        android:textColor="@drawable/xml_selector_text"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/select_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/xml_selector_arrow"
                        android:gravity="center"
                        android:text="@string/Order"
                        android:textColor="@drawable/xml_selector_text"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/select_range"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/xml_selector_arrow"
                        android:gravity="center"
                        android:textColor="@drawable/xml_selector_text"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:footerDividersEnabled="true" >
        </ListView>

        <LinearLayout
            android:id="@+id/recommend_title"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_below="@+id/search_result"
            android:orientation="vertical"
            android:visibility="gone" >

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/gainsboro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/Recommendation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/recommend_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recommend_title"
            android:visibility="gone" >
        </ListView>

        <ImageView
            android:id="@+id/fail_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="250dp"
            android:src="@drawable/button_fail"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fail_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="250dp"
            android:gravity="center_vertical"
            android:text="@string/Fail"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>