<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyblue"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/button_back" />

        <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/shop_detail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/button_more" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey" >

            <ListView
                android:id="@+id/menu_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white" >

            <ListView
                android:id="@+id/menu_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/menu_foot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white" >

        <FrameLayout
            android:id="@+id/s_t"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp" >

            <ImageView
                android:id="@+id/shopcart"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/button_shopcart" />

            <TextView
                android:id="@+id/total_num"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="right|top"
                android:text="@string/InitNumber"
                android:textColor="@color/green"
                android:textSize="12sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/s_t"
            android:text="@string/InitMoney"
            android:textColor="@color/skyblue" />

        <TextView
            android:id="@+id/confirm_order"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/skyblue"
            android:gravity="center"
            android:text="@string/Finish"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>