<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/result_item"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/ReviewScore"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RatingBar
                    android:id="@+id/result_rate"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:isIndicator="true"
                    android:numStars="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/TrafficCondition"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/result_traffic"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/Event"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/result_event"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/result_price"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/skyblue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/result_distance"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>